<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_double">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/dog"
                android:src="@drawable/ic_paw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:textAlignment="textStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_icon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Airedale Terrier" />

            <ImageView
                android:id="@+id/iv_group"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/margin"
                android:contentDescription="@string/group"
                android:src="@drawable/ic_workspace"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginStart="@dimen/margin_half"
                app:layout_constraintBottom_toBottomOf="@+id/iv_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_group"
                app:layout_constraintTop_toTopOf="@+id/iv_group"
                tools:text="Terrier" />

            <ImageView
                android:id="@+id/iv_origin"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/margin"
                android:contentDescription="@string/origin"
                android:src="@drawable/ic_globe"
                app:layout_constraintStart_toStartOf="@+id/iv_group"
                app:layout_constraintTop_toBottomOf="@+id/iv_group" />

            <TextView
                android:id="@+id/tv_origin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="@+id/iv_origin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_group"
                app:layout_constraintTop_toTopOf="@+id/iv_origin"
                tools:text="United Kingdom, England" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>